deployment/CrimeFinder/templates/webapp.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-service
spec:
  type: NodePort
  selector:
    component: webapp
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: webapp
  labels:
    component: webapp
spec:
  selector:
    matchLabels:
      component: webapp
  template:
    metadata:
      name: webapp
      labels:
        component: webapp
    spec:
      containers:
      - name: webapp
        image: gcr.io/hackathon-19/frontend-hack2019:0.0.14
        ports:
        - name: http
          protocol: TCP
          containerPort: 5000
